feat: return image signature, if hmac key provided
